@@ -4,11 +4,13 @@
 
   * Node#at_xpath returns the first element of the NodeSet matching the XPath expression.
   * Node#at_css returns the first element of the NodeSet matching the CSS selector.
+  * NodeSet#| for unions GH #119 (Thanks Serabe!)
 
 * Bugfixes
 
   * returns nil when HTML documents do not declare a meta encoding tag. GH #115
   * Uses RbConfig::CONFIG['host_os'] to adjust ENV['PATH'] GH #113
+  * NodeSet#search is more efficient GH #119 (Thanks Serabe!)
 
 === 1.3.3 / 2009/07/26
 
